temp/objects/Account.object
<CustomObject>
    <fields>
        <fullName>C501_Imagine_WA_County__c</fullName>
        <inlineHelpText>This field should reflect county of the training. If the training out of state, this should be the WA County closest to the training. It is used for outreach.</inlineHelpText>
        <label>Imagine WA County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_WA_Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Previous Level field for use with new Level feature. May be edited or deleted as needed.</description>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households (Previous Level)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ii_CCA_License_Status__c</fullName>
        <label>CCA License Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_CCA_Region__c</fullName>
        <label>CCA Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central WA</fullName>
                </value>
                <value>
                    <fullName>Eastern WA</fullName>
                </value>
                <value>
                    <fullName>King County</fullName>
                </value>
                <value>
                    <fullName>Northwest WA</fullName>
                </value>
                <value>
                    <fullName>Olympic Peninsula</fullName>
                </value>
                <value>
                    <fullName>Pierce Country</fullName>
                </value>
                <value>
                    <fullName>Southwest WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_County__c</fullName>
        <label>County</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_DEL_Licensing_Office__c</fullName>
        <label>DEL Licensing Office</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_DEL_Licensing_Region__c</fullName>
        <label>DEL Licensing Region</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Director_Owner_Licensee__c</fullName>
        <label>Director / Owner / Licensee</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Early_Achievers_Participation_Status__c</fullName>
        <label>Early Achievers Participation Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Eligible_For_Substitute_Pool_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible For Substitute Pool Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Eligible_Substitute_Pool_Status_Date__c</fullName>
        <label>Eligible For Substitute Pool Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ii_Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Documentation_Status_Date__c</fullName>
        <label>Facility Documentation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Orientation_Status_Date__c</fullName>
        <label>Facility Orientation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Orientation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Orientation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Facility_Type__c</fullName>
        <label>Facility Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_FamLink_Id__c</fullName>
        <label>FamLink Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Merit_License_Status__c</fullName>
        <label>MERIT License Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Merit_Substitute_Pool_Status__c</fullName>
        <description>Use the value coming from MERIT, for any facility not in the list then set to Not Approved (Existing Field from above)</description>
        <label>MERIT Substitute Pool Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Finishing Qualifications</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_Not_Approved_Reasons__c</fullName>
        <label>Not Approved Reasons</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>custom_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ii_Provider_Id__c</fullName>
        <description>Provider Id is unique to MERIT and no associated field in CCA or Unionware</description>
        <externalId>true</externalId>
        <inlineHelpText>Provider Id is unique to MERIT and no associated field in CCA or Unionware</inlineHelpText>
        <label>Provider Id</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ii_Race__c</fullName>
        <label>Race</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Rating_Level__c</fullName>
        <label>Rating Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_SSPS__c</fullName>
        <description>SSPS# comes from CCA and may be equal to the SSPS/Provider Id coming from MERIT</description>
        <inlineHelpText>SSPS# comes from CCA and may be equal to the SSPS/Provider Id coming from MERIT</inlineHelpText>
        <label>SSPS#</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ii_Serving_Children_On_Subsidy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serving Children On Subsidy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ii_Substitute_Pool_Status_Date__c</fullName>
        <label>Substitute Pool Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ii_Username__c</fullName>
        <label>Username</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iiam_Web_Login_ID__c</fullName>
        <formula>ii_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Login ID</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An Account representing a Household containing one or more individuals</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>An Account representing an organization</description>
        <label>Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Facility</fullName>
        <active>true</active>
        <description>An Account representing an Training Location</description>
        <label>Training Facility</label>
    </recordTypes>
</CustomObject>